--- a/index.html
+++ b/index.html
@@ -83,5 +83,25 @@
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <img src="assets/pimientos.png" class="footer-floating" alt="" />
+      <div class="footer-circle"></div>
+      <div class="logo-footer">
+        <img src="assets/logo_text.png" alt="" />
+      </div>
+
+      <div class="links">
+        <ul>
+          <li><a href="/carta" target="_blank">Carta</a></li>
+          <li><a href="/contacto" target="_blank">Contacto</a></li>
+          <li><a href="/direccion" target="_blank">Direccion</a></li>
+        </ul>
+      </div>
+
+      <div class="copyright">
+        <p>© copyright 2023 - Pizzeria</p>
+      </div>
+    </footer>
   </body>
 </html>
